--- a/config/docker-compose.yml
+++ b/config/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   hbbs:
     container_name: hbbs
     image: rustdesk/rustdesk-server:latest
-    command: hbbs
+    command: hbbs -k _
     volumes:
       - ./data:/root
     network_mode: "host"
@@ -12,7 +12,7 @@ services:
     restart: unless-stopped
 
   hbbr:
-    container_name: hbbr
+    container_name: hbbr -k _
     image: rustdesk/rustdesk-server:latest
     command: hbbr
     volumes:
